# audiomark

./: .gitignore  CMakeLists.txt  README.md  TEMP.md  main.c
lib/speexdsp/include/: os_support_custom.h
lib/speexdsp/libspeexdsp/: buffer.c  speex_memory_stats.c
ports/arm/: run_cmsis_nn.cpp  run_ethosu.cpp  th_api.c  th_types.h
ports/barebones/: th_api.c
src/: ee_abf_f32.c  ee_abf_f32.h  ee_aec_f32.c  ee_anr_f32.c  ee_api.h  ee_audiomark.c  ee_audiomark.cpp  ee_audiomark.h  ee_kws.c  ee_kws.h  ee_mfcc_f32.c  ee_types.h  old_ee_audiomark.c
src/cmsis_stream/: ABF.hpp  AEC.hpp  ANR.hpp  AppNodes.h  DSNN.hpp  GenericNodes.h  Result.hpp  Source.hpp  audiomark.dot  custom.h  graph.py  pre_schedule_audiomark.dot  scheduler.cpp  scheduler.h  test.py
src/cmsis_stream/nodes/: ABF.hpp  AEC.hpp  ANR.hpp  DSNN.hpp  GstResult.hpp  MFCC.hpp  MajorityVote.hpp
tests/: kws_graph.py  kws_test_custom.h  pre_schedule_test_kws.dot  test_abf_f32.cpp  test_aec_f32.cpp  test_anr_f32.cpp  test_app_nodes.h  test_kws.cpp  test_kws.dot  test_mfcc_f32.cpp  test_scheduler.cpp  test_scheduler.h
